Some polishing on the Project and exporting features

--- a/NAPS2.Core/WinForms/FConfigurePrj.resx
+++ b/NAPS2.Core/WinForms/FConfigurePrj.resx
@@ -119,13 +119,13 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="BT_chgProjectName.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 9.75pt</value>
+    <value>Segoe UI, 10pt</value>
   </data>
   <data name="BT_chgProjectName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 415</value>
+    <value>12, 531</value>
   </data>
   <data name="BT_chgProjectName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>274, 23</value>
+    <value>274, 39</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="BT_chgProjectName.TabIndex" type="System.Int32, mscorlib">
@@ -144,13 +144,16 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;BT_chgProjectName.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>6</value>
+  </data>
+  <data name="BT_OK.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
   </data>
   <data name="BT_OK.Location" type="System.Drawing.Point, System.Drawing">
-    <value>435, 415</value>
+    <value>620, 531</value>
   </data>
   <data name="BT_OK.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
+    <value>84, 39</value>
   </data>
   <data name="BT_OK.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -168,17 +171,20 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;BT_OK.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>5</value>
+  </data>
+  <data name="BT_cancel.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="BT_cancel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="BT_cancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>354, 415</value>
+    <value>524, 531</value>
   </data>
   <data name="BT_cancel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
+    <value>90, 39</value>
   </data>
   <data name="BT_cancel.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -196,19 +202,19 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;BT_cancel.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>4</value>
   </data>
   <data name="BT_ExportConfig.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 9.75pt</value>
+    <value>Segoe UI, 10pt</value>
   </data>
   <data name="BT_ExportConfig.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="BT_ExportConfig.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 386</value>
+    <value>12, 485</value>
   </data>
   <data name="BT_ExportConfig.Size" type="System.Drawing.Size, System.Drawing">
-    <value>274, 23</value>
+    <value>274, 40</value>
   </data>
   <data name="BT_ExportConfig.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -226,19 +232,19 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;BT_ExportConfig.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>3</value>
   </data>
   <data name="LB_ConfigList.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 9.75pt</value>
+    <value>Segoe UI, 10pt</value>
   </data>
   <data name="LB_ConfigList.ItemHeight" type="System.Int32, mscorlib">
-    <value>16</value>
+    <value>28</value>
   </data>
   <data name="LB_ConfigList.Location" type="System.Drawing.Point, System.Drawing">
-    <value>17, 19</value>
+    <value>15, 27</value>
   </data>
   <data name="LB_ConfigList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>274, 340</value>
+    <value>274, 368</value>
   </data>
   <data name="LB_ConfigList.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -253,22 +259,22 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;LB_ConfigList.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="Bt_New.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 9.75pt</value>
+    <value>Segoe UI, 10pt</value>
   </data>
   <data name="Bt_New.Location" type="System.Drawing.Point, System.Drawing">
     <value>308, 19</value>
   </data>
   <data name="Bt_New.Size" type="System.Drawing.Size, System.Drawing">
-    <value>184, 23</value>
+    <value>367, 41</value>
   </data>
   <data name="Bt_New.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
   </data>
   <data name="Bt_New.Text" xml:space="preserve">
-    <value>Create new from active</value>
+    <value>Create from active configuration</value>
   </data>
   <data name="&gt;&gt;Bt_New.Name" xml:space="preserve">
     <value>Bt_New</value>
@@ -280,16 +286,16 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;Bt_New.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="BT_Apply.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 9.75pt</value>
+    <value>Segoe UI, 10pt</value>
   </data>
   <data name="BT_Apply.Location" type="System.Drawing.Point, System.Drawing">
-    <value>308, 336</value>
+    <value>308, 372</value>
   </data>
   <data name="BT_Apply.Size" type="System.Drawing.Size, System.Drawing">
-    <value>184, 23</value>
+    <value>367, 34</value>
   </data>
   <data name="BT_Apply.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -307,22 +313,22 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;BT_Apply.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="BT_Remove.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 9.75pt</value>
+    <value>Segoe UI, 10pt</value>
   </data>
   <data name="BT_Remove.Location" type="System.Drawing.Point, System.Drawing">
-    <value>308, 48</value>
+    <value>308, 180</value>
   </data>
   <data name="BT_Remove.Size" type="System.Drawing.Size, System.Drawing">
-    <value>184, 23</value>
+    <value>367, 38</value>
   </data>
   <data name="BT_Remove.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
   </data>
   <data name="BT_Remove.Text" xml:space="preserve">
-    <value>Remove selected</value>
+    <value>Remove selected configuration</value>
   </data>
   <data name="&gt;&gt;BT_Remove.Name" xml:space="preserve">
     <value>BT_Remove</value>
@@ -334,22 +340,52 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;BT_Remove.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
+  </data>
+  <data name="BTN_Update.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
+  <data name="BTN_Update.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="BTN_Update.Location" type="System.Drawing.Point, System.Drawing">
+    <value>308, 110</value>
+  </data>
+  <data name="BTN_Update.Size" type="System.Drawing.Size, System.Drawing">
+    <value>367, 36</value>
+  </data>
+  <data name="BTN_Update.TabIndex" type="System.Int32, mscorlib">
+    <value>9</value>
+  </data>
+  <data name="BTN_Update.Text" xml:space="preserve">
+    <value>Update selected configuration</value>
+  </data>
+  <data name="&gt;&gt;BTN_Update.Name" xml:space="preserve">
+    <value>BTN_Update</value>
+  </data>
+  <data name="&gt;&gt;BTN_Update.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;BTN_Update.Parent" xml:space="preserve">
+    <value>groupBox1</value>
+  </data>
+  <data name="&gt;&gt;BTN_Update.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <data name="TB_Rename.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 9.75pt</value>
+    <value>Segoe UI, 10pt</value>
   </data>
   <data name="TB_Rename.Location" type="System.Drawing.Point, System.Drawing">
-    <value>308, 81</value>
+    <value>308, 66</value>
   </data>
   <data name="TB_Rename.Size" type="System.Drawing.Size, System.Drawing">
-    <value>183, 23</value>
+    <value>367, 36</value>
   </data>
   <data name="TB_Rename.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
   </data>
   <data name="TB_Rename.Text" xml:space="preserve">
-    <value>Rename config</value>
+    <value>Change configuration name</value>
   </data>
   <data name="&gt;&gt;TB_Rename.Name" xml:space="preserve">
     <value>TB_Rename</value>
@@ -361,13 +397,16 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;TB_Rename.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
+  </data>
+  <data name="groupBox1.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 9pt</value>
   </data>
   <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 1</value>
+    <value>12, 12</value>
   </data>
   <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>498, 370</value>
+    <value>692, 416</value>
   </data>
   <data name="groupBox1.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -385,13 +424,70 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;groupBox1.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="TB_ConfigName.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
+  <data name="TB_ConfigName.Location" type="System.Drawing.Point, System.Drawing">
+    <value>307, 491</value>
+  </data>
+  <data name="TB_ConfigName.Size" type="System.Drawing.Size, System.Drawing">
+    <value>380, 34</value>
+  </data>
+  <data name="TB_ConfigName.TabIndex" type="System.Int32, mscorlib">
+    <value>9</value>
+  </data>
+  <data name="&gt;&gt;TB_ConfigName.Name" xml:space="preserve">
+    <value>TB_ConfigName</value>
+  </data>
+  <data name="&gt;&gt;TB_ConfigName.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;TB_ConfigName.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;TB_ConfigName.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="LBL_Name.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="LBL_Name.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 9pt</value>
+  </data>
+  <data name="LBL_Name.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="LBL_Name.Location" type="System.Drawing.Point, System.Drawing">
+    <value>303, 460</value>
+  </data>
+  <data name="LBL_Name.Size" type="System.Drawing.Size, System.Drawing">
+    <value>332, 25</value>
+  </data>
+  <data name="LBL_Name.TabIndex" type="System.Int32, mscorlib">
+    <value>10</value>
+  </data>
+  <data name="LBL_Name.Text" xml:space="preserve">
+    <value>Name of the current active configuration</value>
+  </data>
+  <data name="&gt;&gt;LBL_Name.Name" xml:space="preserve">
+    <value>LBL_Name</value>
+  </data>
+  <data name="&gt;&gt;LBL_Name.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;LBL_Name.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;LBL_Name.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>522, 450</value>
+    <value>716, 582</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 9pt</value>
@@ -659,6 +755,6 @@
     <value>FConfigurePrj</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=6.2.1.17488, Culture=neutral, PublicKeyToken=null</value>
+    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=6.2.1.36290, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
