--- a/NAPS2.Core/WinForms/FExport.resx
+++ b/NAPS2.Core/WinForms/FExport.resx
@@ -118,15 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="tb_CSVExpression.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 58</value>
+  <data name="tb_CSVExpression.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 10pt</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="tb_CSVExpression.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
+  <data name="tb_CSVExpression.Location" type="System.Drawing.Point, System.Drawing">
+    <value>16, 89</value>
   </data>
   <data name="tb_CSVExpression.Size" type="System.Drawing.Size, System.Drawing">
-    <value>387, 20</value>
+    <value>780, 30</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="tb_CSVExpression.TabIndex" type="System.Int32, mscorlib">
@@ -144,14 +143,14 @@
   <data name="&gt;&gt;tb_CSVExpression.ZOrder" xml:space="preserve">
     <value>5</value>
   </data>
-  <data name="btn_Expression.Location" type="System.Drawing.Point, System.Drawing">
-    <value>443, 84</value>
+  <data name="btn_Expression.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
   </data>
-  <data name="btn_Expression.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
+  <data name="btn_Expression.Location" type="System.Drawing.Point, System.Drawing">
+    <value>664, 129</value>
   </data>
   <data name="btn_Expression.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 37</value>
+    <value>162, 57</value>
   </data>
   <data name="btn_Expression.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -234,17 +233,14 @@
   <data name="groupBox1.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
+  <data name="groupBox1.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
   <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>40, 160</value>
-  </data>
-  <data name="groupBox1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
-  </data>
-  <data name="groupBox1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
+    <value>12, 246</value>
   </data>
   <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>478, 193</value>
+    <value>814, 297</value>
   </data>
   <data name="groupBox1.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
@@ -264,14 +260,18 @@
   <data name="&gt;&gt;groupBox1.ZOrder" xml:space="preserve">
     <value>8</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="lbl_meta.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="lbl_meta.Location" type="System.Drawing.Point, System.Drawing">
-    <value>10, 95</value>
+    <value>15, 146</value>
+  </data>
+  <data name="lbl_meta.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="lbl_meta.Size" type="System.Drawing.Size, System.Drawing">
-    <value>439, 38</value>
+    <value>658, 58</value>
   </data>
   <data name="lbl_meta.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -295,10 +295,13 @@
     <value>NoControl</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>10, 80</value>
+    <value>15, 123</value>
+  </data>
+  <data name="label1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>390, 23</value>
+    <value>585, 35</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -319,13 +322,10 @@
     <value>1</value>
   </data>
   <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>19, 39</value>
-  </data>
-  <data name="label3.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 0, 2, 0</value>
+    <value>15, 60</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>337, 17</value>
+    <value>506, 26</value>
   </data>
   <data name="label3.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -345,11 +345,17 @@
   <data name="&gt;&gt;label3.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
+  <data name="lbl_FilenameCSV.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
   <data name="lbl_FilenameCSV.Location" type="System.Drawing.Point, System.Drawing">
-    <value>10, 133</value>
+    <value>15, 205</value>
+  </data>
+  <data name="lbl_FilenameCSV.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="lbl_FilenameCSV.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 23</value>
+    <value>218, 35</value>
   </data>
   <data name="lbl_FilenameCSV.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -369,14 +375,14 @@
   <data name="&gt;&gt;lbl_FilenameCSV.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <data name="tb_exportFilename.Location" type="System.Drawing.Point, System.Drawing">
-    <value>11, 158</value>
+  <data name="tb_exportFilename.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 10pt</value>
   </data>
-  <data name="tb_exportFilename.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
+  <data name="tb_exportFilename.Location" type="System.Drawing.Point, System.Drawing">
+    <value>16, 243</value>
   </data>
   <data name="tb_exportFilename.Size" type="System.Drawing.Size, System.Drawing">
-    <value>387, 20</value>
+    <value>780, 30</value>
   </data>
   <data name="tb_exportFilename.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -396,14 +402,14 @@
   <data name="cb_CSVEnabler.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="cb_CSVEnabler.Location" type="System.Drawing.Point, System.Drawing">
-    <value>40, 139</value>
+  <data name="cb_CSVEnabler.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
   </data>
-  <data name="cb_CSVEnabler.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
+  <data name="cb_CSVEnabler.Location" type="System.Drawing.Point, System.Drawing">
+    <value>12, 211</value>
   </data>
   <data name="cb_CSVEnabler.Size" type="System.Drawing.Size, System.Drawing">
-    <value>140, 17</value>
+    <value>245, 32</value>
   </data>
   <data name="cb_CSVEnabler.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -423,14 +429,14 @@
   <data name="&gt;&gt;cb_CSVEnabler.ZOrder" xml:space="preserve">
     <value>6</value>
   </data>
-  <data name="tb_ExportPath.Location" type="System.Drawing.Point, System.Drawing">
-    <value>40, 40</value>
+  <data name="tb_ExportPath.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 10pt</value>
   </data>
-  <data name="tb_ExportPath.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
+  <data name="tb_ExportPath.Location" type="System.Drawing.Point, System.Drawing">
+    <value>28, 62</value>
   </data>
   <data name="tb_ExportPath.Size" type="System.Drawing.Size, System.Drawing">
-    <value>387, 20</value>
+    <value>610, 30</value>
   </data>
   <data name="tb_ExportPath.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -450,17 +456,17 @@
   <data name="label2.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="label2.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
   <data name="label2.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>37, 25</value>
-  </data>
-  <data name="label2.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 0, 2, 0</value>
+    <value>23, 34</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>29, 13</value>
+    <value>50, 28</value>
   </data>
   <data name="label2.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -480,17 +486,17 @@
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
     <value>7</value>
   </data>
+  <data name="BTN_OK.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
   <data name="BTN_OK.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="BTN_OK.Location" type="System.Drawing.Point, System.Drawing">
-    <value>443, 381</value>
-  </data>
-  <data name="BTN_OK.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
+    <value>714, 589</value>
   </data>
   <data name="BTN_OK.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 37</value>
+    <value>112, 57</value>
   </data>
   <data name="BTN_OK.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -510,17 +516,17 @@
   <data name="&gt;&gt;BTN_OK.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
+  <data name="BTN_Cancel.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
   <data name="BTN_Cancel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="BTN_Cancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>363, 381</value>
-  </data>
-  <data name="BTN_Cancel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
+    <value>596, 589</value>
   </data>
   <data name="BTN_Cancel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 37</value>
+    <value>112, 57</value>
   </data>
   <data name="BTN_Cancel.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -543,14 +549,14 @@
   <data name="BTN_File.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
-  <data name="BTN_File.Location" type="System.Drawing.Point, System.Drawing">
-    <value>443, 25</value>
+  <data name="BTN_File.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
   </data>
-  <data name="BTN_File.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
+  <data name="BTN_File.Location" type="System.Drawing.Point, System.Drawing">
+    <value>664, 38</value>
   </data>
   <data name="BTN_File.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 52</value>
+    <value>162, 80</value>
   </data>
   <data name="BTN_File.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -579,11 +585,17 @@
   <data name="label4.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="label4.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>41, 73</value>
+    <value>27, 107</value>
+  </data>
+  <data name="label4.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>48, 13</value>
+    <value>83, 28</value>
   </data>
   <data name="label4.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
@@ -603,11 +615,17 @@
   <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
+  <data name="LBL_Exemple.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
   <data name="LBL_Exemple.Location" type="System.Drawing.Point, System.Drawing">
-    <value>37, 86</value>
+    <value>30, 129</value>
+  </data>
+  <data name="LBL_Exemple.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="LBL_Exemple.Size" type="System.Drawing.Size, System.Drawing">
-    <value>388, 51</value>
+    <value>582, 78</value>
   </data>
   <data name="LBL_Exemple.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -630,14 +648,17 @@
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
-  </data>
   <data name="$this.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
     <value>GrowAndShrink</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>559, 428</value>
+    <value>838, 658</value>
+  </data>
+  <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Export configuration panel</value>
@@ -646,6 +667,6 @@
     <value>FExport</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=6.2.1.19506, Culture=neutral, PublicKeyToken=null</value>
+    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=6.2.1.36290, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
